syntax = "proto2";
package test;

option go_package = ".;test";

service TestPutService {
    rpc TestPut (TestPutRequest) returns (TestPutResponse) {}
}

message TestPutRequest {
    required string name = 1;
}

message TestPutResponse {
    required int32 status = 1;
}
